--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,10 @@ services:
     container_name: "django_cont"
     ports:
       - "8000:8000"
-    command: sh -c "python manage.py migrate --noinput && gunicorn notesapp.wsgi --bind 0.0.0.0:8000"
+    command: >
+  sh -c "until nc -z db_cont 3306; do echo 'Waiting for MySQL...'; sleep 2; done &&
+         python manage.py migrate --noinput &&
+         gunicorn notesapp.wsgi:application --bind 0.0.0.0:8000"
     env_file:
       - ".env"
     depends_on:
