--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   nginx:
     build: ./nginx
     image: nginx
-    container_name: "nginx_cont"
+    container_name: nginx_cont
     ports:
       - "80:80"
     restart: always
@@ -17,30 +17,24 @@ services:
     build:
       context: .
     image: django_app
-    container_name: "django_cont"
+    container_name: django_cont
     ports:
       - "8000:8000"
     command: >
-      sh -c "until nc -z db_cont 3306; do echo 'Waiting for MySQL...'; sleep 2; done &&
-         python manage.py migrate --noinput &&
-         gunicorn notesapp.wsgi:application --bind 0.0.0.0:8000"
+      sh -c "until nc -z db 3306; do echo 'Waiting for MySQL...'; sleep 2; done &&
+             python manage.py migrate --noinput &&
+             gunicorn notesapp.wsgi:application --bind 0.0.0.0:8000"
     env_file:
       - ".env"
     depends_on:
       - db
     restart: always
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/admin || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
     networks:
       - notes-app-nw
 
   db:
-    image: mysql
-    container_name: "db_cont"
+    image: mysql:8
+    container_name: db_cont
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=test_db
