--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,13 +21,13 @@ services:
     ports:
       - "8000:8000"
     command: >
-      sh -c "until nc -z db 3306; do echo 'Waiting for MySQL...'; sleep 2; done &&
-             python manage.py migrate --noinput &&
+      sh -c "python manage.py migrate --noinput &&
              gunicorn notesapp.wsgi:application --bind 0.0.0.0:8000"
     env_file:
       - ".env"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     restart: always
     networks:
       - notes-app-nw
