--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,53 @@
-version: "3.9"
+version: "3.8"
 
 services:
+  nginx:
+    image: nginx:alpine
+    container_name: nginx_cont
+    ports:
+      - "80:80"
+    depends_on:
+      - django_app
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - notes-app-nw
+    restart: always
+
   django_app:
-    build: .
-    container_name: django_app
+    build:
+      context: .
+    image: django_app:latest
+    container_name: django_cont
     command: >
-      sh -c "until mysqladmin ping -h db -uroot -proot --silent; do
-               echo 'Waiting for MySQL...'; sleep 2;
-             done &&
+      sh -c "until nc -z db 3306; do echo 'Waiting for MySQL...'; sleep 2; done &&
              python manage.py migrate --noinput &&
              gunicorn notesapp.wsgi:application --bind 0.0.0.0:8000"
-    volumes:
-      - .:/app
-      - static_volume:/app/staticfiles
-    ports:
-      - "8000:8000"
     env_file:
-      - .env
+      - ".env"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    networks:
+      - notes-app-nw
+    restart: always
 
   db:
     image: mysql:8
-    container_name: mysql_db
+    container_name: db_cont
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: test_db
     volumes:
-      - mysql_data:/var/lib/mysql
+      - ./data/mysql/db:/var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
       interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 60s
+      start_period: 30s
+    networks:
+      - notes-app-nw
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx_proxy
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx:/etc/nginx/conf.d
-      - static_volume:/app/staticfiles
-    depends_on:
-      - django_app
-
-volumes:
-  mysql_data:
-  static_volume:
+networks:
+  notes-app-nw:
